--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage --runInBand",
     "start": "node ./app/server.js",
     "devstart": "nodemon ./app/server.js"
   },
