--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-generator": "^4.16.1",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.3",
+    "sequelize-cli": "^6.5.2",
     "swagger-parser": "^10.0.3",
     "swagger-routes-express": "^3.3.2",
     "swagger-ui-express": "^4.5.0"
